<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:fitsSystemWindows="true"
              android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:theme="@style/AppTheme.AppBarOverlay">

        <include layout="@layout/toolbar" />


    </com.google.android.material.appbar.AppBarLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/coordinator_lyt"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView

                    android:id="@+id/airplaine_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            <ProgressBar
                    android:id="@+id/progress_circular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/space30"
            />


            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:orientation="vertical">

                <TextView
                        android:id="@+id/no_network_message"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/space5"
                        android:lineSpacingExtra="@dimen/space10"
                        android:text="There is no account available \nTap button below to add new account"
                        android:gravity="center"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                        android:textColor="@android:color/black"
                android:visibility="gone"/>
            </LinearLayout>

        </RelativeLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end|right"
                android:layout_marginBottom="@dimen/space30"
                android:layout_marginRight="@dimen/space15"
                android:clickable="true"
                android:tint="@android:color/white"
                app:backgroundTint="@color/colorPrimary"
                app:fabSize="normal"
                app:rippleColor="@color/mdtp_white"
                app:srcCompat="@drawable/ic_go" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</LinearLayout>